fix: stop serverside imports being bundled for the client

--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -35,7 +35,7 @@ var substitutions = {
 
 var md: string | undefined;
 
-if (typeof window !== undefined) {
+if (!import.meta.env.SSR) {
   marked.use(gfmHeadingId());
   md = await marked.parse(content);
 } else {
