--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -1,5 +1,7 @@
 ---
 import { bookshopName } from "@mws-astro/util";
+import { BUILDMODE } from "astro:env/server";
+
 
 export interface Props {
   contentBlocks: any[];
@@ -37,10 +39,10 @@ Object.entries(componentOverrides).forEach(
     (components[bookshopName(path)] = obj.default),
 );
 
-// if (BUILDMODE === "EDITOR") {
-//   console.info("[Page] Props:", Astro.props);
-//   console.info("[Page] Content Blocks:", Object.keys(components));
-// }
+const Wrapper = BUILDMODE === "EDITOR" ? "editable-array-item" : Fragment;
+// data-editable="array-item"
+// data-id={block._bookshop_name}
+// data-component={block._bookshop_name}
 
 const pagefind = status ? (status === "online" ? "" : undefined) : true;
 ---
@@ -52,15 +54,14 @@ const pagefind = status ? (status === "online" ? "" : undefined) : true;
       const Component = components[block._bookshop_name];
       if (Component) {
         return (
-          <Component
-            {...block}
-            _meta={frontmatter}
-            background_loading={i ? "lazy" : "eager"}
-            data-editable="array-item"
-            data-id={block._bookshop_name}
-            data-component={block._bookshop_name}
-            key={String(i)}
-          />
+          <Wrapper data-id={block._bookshop_name} data-component={block._bookshop_name}>
+            <Component
+              {...block}
+              _meta={frontmatter}
+              background_loading={i ? "lazy" : "eager"}
+              key={String(i)}
+            />
+          </Wrapper>
         );
       }
       const warnstring = `[${Astro.self.name}] Component ${block._bookshop_name} could not be found!`;
