fix: allow buildmode env var to be bundled into the client

--- a/src/pages/pages.astro
+++ b/src/pages/pages.astro
@@ -1,7 +1,7 @@
 ---
 import PageLayout from "@layouts/PageLayout.astro";
 import { getCollection, type CollectionEntry, type CollectionKey} from "astro:content";
-import { BUILDMODE } from "astro:env/server";
+import { BUILDMODE } from "astro:env/client";
 import { collections } from "src/content/config";
 
 export interface Props {
