fix: allow buildmode env var to be bundled into the client

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ import "sanitize.css";
 import "sanitize.css/forms.css";
 import "sanitize.css/typography.css";
 
-import { BUILDMODE } from "astro:env/server";
+import { BUILDMODE } from "astro:env/client";
 // if (BUILDMODE === "EDITOR") {
 //   import("@mws-astro/register-components");
 // }
