--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -1,7 +1,6 @@
 ---
 import { bookshopName } from "@mws-astro/util";
-import { BUILDMODE } from "astro:env/server";
-
+import { BUILDMODE } from "astro:env/client";
 
 export interface Props {
   contentBlocks: any[];
