fix(image): add the source image width/height to fix sizing issues on chrome

--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -249,6 +249,8 @@ function createImageSizes(widths: number[]) {
   {style}
   data-fit={fit}
   {loading}
+  width={srcWidth}
+  height={srcHeight}
 />
 
 <style>
