--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,7 +31,7 @@
 
   --default-font-family: "Open Sans";
   --feature-font-family: var(--default-font-family);
-  --bold-font-family: var(--default-font-family);
+  /* --bold-font-family: var(--default-font-family); */
 
   --color-primary: 24 58 78;
   --color-accent: 80 167 205;
