feat(section): add pre slot for inserting content before text-content

--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -135,6 +135,7 @@ const expando = classList.includes("expando") ? true : false;
   }
 
   <div class="component-wrapper">
+    <slot name="pre" />
     {
       content && (
         <div class="text-content">
